--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html lang="pl"><head>
+<html lang="pl"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>StreamingHub • Free video</title>
