--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 const SUPABASE_URL = "https://jjmnacolebxsifmnmqks.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpqbW5hY29sZWJ4c2lmbW5tcWtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU3OTcyNDQsImV4cCI6MjA3MTM3MzI0NH0.1hNoBQ4wDuA_t_vscorQ6FRb-aW8IxHEDxuZKEhndv0";
 const db = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+// Przykładowa konfiguracja w kodzie
+const supabase = createClient(
+
+  {
+    auth: {
+      // Opcjonalne dodatkowe ustawienia
+      persistSession: true,
+      autoRefreshToken: true
+    }
+  }
+)
 
 /* =========================
    UTILS
