--- a/test2.html
+++ b/test2.html
@@ -237,9 +237,9 @@ async function loadHome(){
   // Najwyżej oceniane
   const top = [...movies].sort((a,b)=> ( (avg[b.id]||0) - (avg[a.id]||0) )).slice(0,12);
 
-  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
-  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
-  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
+//  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
+//  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
+//  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
 
   // TOP10 (mix: 60% ocena, 40% popularność)
   const mixScore = m => ( (avg[m.id]||0)*0.6 + (pop[m.id]||0)*0.4 );
