--- a/test3.html
+++ b/test3.html
@@ -240,7 +240,7 @@ async function loadHome(){
 //  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
 //  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
 //  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
-$('#list-filtered').innerHTML = '';
+//$('#list-filtered').innerHTML = '';
 
 
   // TOP10 (mix: 60% ocena, 40% popularność)
