--- a/test5.html
+++ b/test5.html
@@ -399,63 +399,54 @@ function renderMovies(containerId, movies) {
   });
 }
 
-// 📥 Pobieranie filmów z Supabase
+// 📽️ Pobieranie filmów z Supabase
 async function loadMovies() {
+  // pobierz filmy
   const { data: movies, error } = await db
     .from("movies")
     .select("*")
     .order("created_at", { ascending: false });
 
   if (error) {
-    console.error("Błąd filmów:", error);
+    console.error("❌ Błąd filmów:", error);
     return;
   }
-  console.log("📀 Filmy z bazy:", movies);
+  console.log("🎬 Filmy z bazy:", movies);
 
-  // 📊 Pobierz średnie oceny
-const { data: ratings, error: ratingError } = await db
-  .from("ratings")
-  .select("movie_id, score");
-
-if (ratingError) {
-  console.error("Błąd ocen:", ratingError);
-}
-
-let ratingMap = {};
-ratings.forEach(r => {
-  if (!ratingMap[r.movie_id]) ratingMap[r.movie_id] = [];
-  ratingMap[r.movie_id].push(r.score);
-});
-
-let avgRatings = Object.entries(ratingMap).map(([movie_id, scores]) => ({
-  movie_id,
-  avg: scores.reduce((a, b) => a + b, 0) / scores.length
-}));
-
+  // 📊 Pobierz wszystkie oceny
+  const { data: ratings, error: ratingError } = await db
+    .from("ratings")
+    .select("movie_id, score");
 
   if (ratingError) {
-    console.error("Błąd ocen:", ratingError);
+    console.error("❌ Błąd ocen:", ratingError);
   }
   console.log("⭐ Oceny:", ratings);
 
-  // 🔗 Dodaj średnie oceny do filmów
+  // 🧮 policz średnie oceny w JS
+  let ratingMap = {};
+  if (ratings) {
+    ratings.forEach(r => {
+      if (!ratingMap[r.movie_id]) ratingMap[r.movie_id] = [];
+      ratingMap[r.movie_id].push(r.score);
+    });
+  }
+
   let moviesWithRatings = movies.map(m => {
-    const r = ratings ? ratings.find(r => r.movie_id === m.id) : null;
-    return { ...m, avg_rating: r ? r.avg : 0 };
+    let scores = ratingMap[m.id] || [];
+    let avg = scores.length > 0 ? scores.reduce((a,b)=>a+b,0)/scores.length : 0;
+    return { ...m, avg_rating: avg };
   });
 
-  // 🟣 Polecane – sortuj po points_required
-  renderMovies("list-recommended", [...movies].sort((a,b)=> (b.points_required || 0) - (a.points_required || 0)).slice(0,5));
+  // 🎯 Polecane = filmy z największą ilością punktów wymaganych
+  renderMovies("recommended", [...movies].sort((a,b)=>b.points_required - a.points_required).slice(0,5));
 
-  // 🟢 Nowo dodane – sortuj po dacie
-  renderMovies("list-new", [...movies].sort((a,b)=> new Date(b.created_at) - new Date(a.created_at)).slice(0,5));
+  // 🆕 Nowo dodane = wg daty dodania
+  renderMovies("new", movies.slice(0,5));
 
-  // 🔥 Najwyżej oceniane – po średniej ocenie
-  renderMovies("list-top", moviesWithRatings.sort((a,b)=> (b.avg_rating || 0) - (a.avg_rating || 0)).slice(0,5));
+  // ⭐ Najwyżej oceniane
+  renderMovies("top", moviesWithRatings.sort((a,b)=>b.avg_rating - a.avg_rating).slice(0,5));
 }
-
-// 🚀 Uruchomienie
-loadMovies();
 
 </script>
 </body>
