--- a/test5.html
+++ b/test5.html
@@ -237,9 +237,9 @@ async function loadHome(){
   // Najwyżej oceniane
   const top = [...movies].sort((a,b)=> ( (avg[b.id]||0) - (avg[a.id]||0) )).slice(0,12);
 
-  //$('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
-  //$('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
-  //$('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
+  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
+  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
+  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
 //$('#list-filtered').innerHTML = '';
 
 
@@ -280,9 +280,9 @@ async function applyFilters(){
     : '<div class="alert">Brak wyników.</div>';
 
   // 🔥 wyczyść stare sekcje
-  $('#list-recommended').innerHTML = '';
-  $('#list-new').innerHTML = '';
-  $('#list-top').innerHTML = '';
+  //$('#list-recommended').innerHTML = '';
+  //$('#list-new').innerHTML = '';
+//  $('#list-top').innerHTML = '';
 }
 
 /* ==== Szczegóły filmu + odtwarzacz ==== */
