--- a/test5 copy.html
+++ b/test5 copy.html
@@ -237,9 +237,9 @@ async function loadHome(){
   // Najwyżej oceniane
   const top = [...movies].sort((a,b)=> ( (avg[b.id]||0) - (avg[a.id]||0) )).slice(0,12);
 
-//  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
-//  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
-//  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
+  $('#list-recommended').innerHTML = recommended.map(m=>card(m, avg)).join('');
+  $('#list-new').innerHTML = newest.map(m=>card(m, avg)).join('');
+  $('#list-top').innerHTML = top.map(m=>card(m, avg)).join('');
 //$('#list-filtered').innerHTML = '';
 
 
@@ -332,7 +332,6 @@ async function addMovie(){
   if(error){ alert('Błąd dodawania: '+error.message); return; }
   closeAdmin();
   await loadCategories();
-  await loadHome();
   await applyFilters();
 }
 
@@ -349,6 +348,56 @@ $('#q').addEventListener('input', applyFilters);
     document.getElementById(id).addEventListener('change', applyFilters);
   });
 })();
+function renderMovies(containerId, movies) {
+  const container = document.getElementById(containerId);
+  if (!container) return;
+
+  container.innerHTML = "";
+
+  movies.forEach(movie => {
+    const card = document.createElement("div");
+    card.className = "movie-card";
+    card.innerHTML = `
+      <img src="${movie.thumb || 'https://via.placeholder.com/180x250'}" alt="${movie.title}">
+      <div class="movie-info">
+        <h3>${movie.title} <span class="badge">${movie.avg_rating ? movie.avg_rating.toFixed(1) : "–"}</span></h3>
+        <div class="movie-meta">
+          czas: ${movie.duration || "?"} min • rok ${movie.year || "?"}
+        </div>
+      </div>
+    `;
+    container.appendChild(card);
+  });
+}
+
+// 🎬 Pobieranie filmów z Supabase
+// 🎬 Renderowanie filmów
+function renderMovies(containerId, movies) {
+  const container = document.getElementById(containerId);
+  if (!container) {
+    console.error("❌ Brak kontenera:", containerId);
+    return;
+  }
+
+  console.log("🎬 Render →", containerId, movies); // 🔎 debug
+
+  container.innerHTML = "";
+  movies.forEach(movie => {
+    const card = document.createElement("div");
+    card.className = "movie-card";
+    card.innerHTML = `
+      <img src="${movie.thumb || 'https://via.placeholder.com/180x250'}" alt="${movie.title}">
+      <div class="movie-info">
+        <h3>${movie.title} <span class="badge">${movie.avg_rating ? movie.avg_rating.toFixed(1) : "–"}</span></h3>
+        <div class="movie-meta">
+          czas: ${movie.duration || "?"} min • rok ${movie.year || "?"}
+        </div>
+      </div>
+    `;
+    container.appendChild(card);
+  });
+}
+
 </script>
 </body>
 </html>
