--- a/test5 copy.html
+++ b/test5 copy.html
@@ -225,6 +225,9 @@ function card(m, avg) {
     </div>`;
 }
 
+function buyMovie(id, cost) {
+    alert(`Kupujesz film ID: ${id} za ${cost} pkt`);
+}
 
 
 /* ==== Widok: strona główna + top10 ==== */
